<resources>
    <string name="app_name">Story App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="your_full_name">Your Full Name</string>
    <string name="back_to_login">Back to Login</string>
    <string name="email_invalid">Email is not matches</string>
    <string name="password_invalid">your password is under 8 chars limit</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="taken_image">Taken Image</string>
    <string name="description">Description</string>
    <string name="example_description">eg: Chiken Rosetta</string>
    <string name="placeholder_name">Owner Name</string>
    <string name="placeholder_description">content description</string>
    <string name="placeholder_content_img">content image</string>
    <string name="add_new_story">Add New Story</string>
    <string name="maps_title">Maps View</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_home_maps">HomeMapsActivity</string>
    <string name="loading">Loading</string>
    <string name="refresh">Refresh</string>
</resources>