<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_height="match_parent"
    tools:context=".ui.view.home.DetailActivity">
    <TextView
        android:transitionName="name"
        android:id="@+id/tv_detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_name"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        />
    <ImageView
        android:transitionName="image"
        android:id="@+id/tv_detail_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/placeholder_content_img" />
    <TextView
        android:transitionName="desc"
        android:id="@+id/tv_detail_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_description"/>



</LinearLayout>